Fix notification wrapping issue

--- a/src/main/static/stylesheets/header.scss
+++ b/src/main/static/stylesheets/header.scss
@@ -177,10 +177,17 @@
   position: relative;
 
   h2 {
+    max-width: 100%;
     font-size: var(--font-size-header-4);
   }
 
   &__text {
+    max-width: 100%;
+
+    * {
+      max-width: 100%;
+    }
+
     a {
       color: var(--color-text-dark-highlight);
     }
